CMAKE_MINIMUM_REQUIRED (VERSION 2.8 FATAL_ERROR)

PROJECT (antitheft-pb)

# Sets
SET(HEADER_FOLDERS "libantitheft" "hasp")
SET(USERS_LIB "Antitheft")
SET(LIBRARIES "GLIB2" "HASP" "ELF" "RT" "Tvrs")
SET(TYPE_PROJECT "exe")
COMMON_SETS()

# Generate file
CREATE_FILE("" "")
# Tests
TESTS()
# For build DEB packet
INSTALL(TARGETS ${PRJ_NAME} RUNTIME DESTINATION usr/bin/tvrs
    PERMISSIONS OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
